# voxel-meshing

./: CMakeLists.txt  CMakeSettings.json  README.md  imgui_config.ini
include/: chunk.h  compute_chunk.h  compute_chunk_v2.h  compute_instance.h  compute_scene.h  line.h  renderer.h  screen_quad.h
include/learnopengl/: camera.h  compute.h
include/ogt_vox/: vox.h
include/shader/: shader.h
res/vox/: 32x32x32.vox  90mins.vox  castle.vox  compute.vox  compute_test.vox  cube.vox  greedy.vox  greedy_meshing case examples.vox  orientation_test.vox  rotation.vox  sphere.vox  temple.vox  test.vox  test3.vox  vertex_count_test.vox  worst_case_test.vox
shaders/: compute.comp  compute_chunk.comp  compute_chunk.frag  compute_chunk.vert  depth.frag  main.frag  main.vert  overdraw.frag  shader.frag  shader.vert  test.comp
shaders/chunk/: main.vert
shaders/compute/: apply_rotations.comp  calculate_buffer_size.comp  compute_chunk.comp  compute_chunk.frag  compute_chunk_v2.comp  compute_instance.comp  compute_instance.frag  compute_instance.vert  compute_instance_greedy_8x8.comp  compute_instance_slicing.comp  greedy_test.comp
shaders/compute_chunk/: compute_chunk.comp  compute_chunk_v2.comp
shaders/learnopengl/: 4.6.shader.vs
shaders/screen_quad/: screen_quad.comp
src/: camera.cpp  chunk.cpp  chunk.h  compute_chunk.cpp  compute_chunk_v2.cpp  compute_instance.cpp  compute_scene.cpp  line.cpp  main.cpp  renderer.cpp  renderer.h  scene.cpp  scene.h  screen_quad.cpp
src/learnopengl/: camera.cpp
